# letters

.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  postCreate.sh
lib/: dune  sendmail_handler.ml
service-test/: dune  test_mailspam.ml
